# manimpango

./: .gitattributes  .gitignore  environment.yml  meson.build  meson_options.txt  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build.yml  tests.yml
docs/: conf.py  reference.rst
manimpango/: __init__.py  _cutils.pyx  _distributor_init.py  _version.py  bufferproxy.pxd  colours.pxd  colours.pyx  exceptions.py  layout.pyx  layout_renderer.pxd  layout_renderer.pyx  meson.build  pango.pxd  register_font.pyx  renderer.pxd
manimpango/_deprecated/: __init__.py  cmanimpango.pyx
manimpango/bufferproxy/: bufferproxy.pyx
manimpango/font_description/: __init__.py  font_description.pyx
manimpango/font_manager/: __init__.py  _register_font.pyx  font_description.pxd  font_description.pyx  meson.build
manimpango/includes/: glib.pxd  meson.build  pango.pxd
manimpango/layout/: __init__.py  layout.pxd  layout.pyx  meson.build  utils.pyi
manimpango/register_font/: __init__.py  register_font.pyx
manimpango/renderer/: __init__.py  meson.build  renderer.pxd  renderer.pyx
manimpango/utils/: __init__.py  _list_fonts.pyi  _list_fonts.pyx  enums.pyx  meson.build
packing/: build_pango.sh
scripts/: build_pango_mac.sh
subprojects/: pango.wrap
tests/: test_font_description.py  test_font_manager.py  test_fonts.py  test_list_fonts.py  test_markup.py
