[build-system]
requires = [
    "https://gitlab.com/thiblahute/mesonpep517/-/archive/b71281f0b0a9831293a17034ef575d78decb4294/mesonpep517-b71281f0b0a9831293a17034ef575d78decb4294.tar.gz",
    "Cython>=0.27",
    "ninja>=1.8.2",
    "meson>=0.53.0"
]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author = "Naveen M K"
author-email = "naveen@syrusdark.website"
meson-python-option-name = "python"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
]
summary = "Bindings for Pango for using with Manim."
description-file = "README.md"
home-page = "https://manimpango.manim.community/"
license = "GPL-3.0-or-later"
maintainer = "The Manim Community Developers"
module = "manimpango"
#platforms = "py3"
project-urls = [
    "Documentation, https://manimpango.manim.community/",
    "Source, https://github.com/ManimCommunity/manimpango",
    "Release notes, https://github.com/ManimCommunity/ManimPango/releases/"
]
requires = ["attrs>=20.0"]
requires-python = ">=3.6"



[tool.isort]
# from https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
